--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>Login</title>
-  </head>
-  <body>
-    <h1>Lab Equipment Management System</h1>
-    <h2>Login</h2>
-    <input type="email" id="email" placeholder="Email" required>
-    <input type="password" id="password" placeholder="Password" required>
-
-    <button id="login-button">Login</button>
-    <button id="registration-button">Register</button>
-    <button id="admin-button">Admin</button>
-    
-    <p id = "login-status"></p>
-
+<head>
+    <title>Lab Equipment Management System</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="container">
+        <h1>Lab Equipment Management System</h1>
+        <h2>Login</h2>
+        <form>
+            <input type="email" id="email" placeholder="Email" required>
+            <input type="password" id="password" placeholder="Password" required>
+            <button type="submit">Login</button>
+            <button type="button">Register</button>
+            <button type="button">Admin</button>
+        </form>
+        <p id="login-status"></p>
+    </div>
     <script src="firebase.js" type="module"></script>
     <script src="Userlogin.js" type="module"></script>
-  </body>
+</body>
 </html>
