--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
   <head>
     <title>Login</title>
+    <link rel="stylesheet" href="styles.css">
+
   </head>
   <body>
     <h1>Lab Equipment Management System</h1>
