--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <input type="email" id="email" placeholder="Email" required>
     <input type="password" id="password" placeholder="Password" required>
 
-    <button id="login-button">Login</button>
-    <button id="registration-button">Register</button>
-    <button id="admin-button">Admin</button>
+    <button id="login-button">Login</button> <br>
+    <button id="registration-button">Register</button> <br>
+    <button id="admin-button">Admin</button> <br>
     
     <p id = "login-status"></p>
 
