--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 
   </head>
   <body>
-    <h1>Lab Equipment Management System</h1>
-    <h2>Login</h2>
-    <input type="email" id="email" placeholder="Email" required>
-    <input type="password" id="password" placeholder="Password" required>
+    <h1>Lab Equipment Management System</h1> <br>
+    <h2>Login</h2> <br>
+    <input type="email" id="email" placeholder="Email" required> <br>
+    <input type="password" id="password" placeholder="Password" required> <br>
 
     <button id="login-button">Login</button> <br>
     <button id="registration-button">Register</button> <br>
