--- a/index.html
+++ b/index.html
@@ -2,20 +2,20 @@
   <head>
     <title>Login</title>
     <link rel="stylesheet" href="styles.css">
-
   </head>
   <body>
-    <h1>Lab Equipment Management System</h1> <br>
-    <h2>Login</h2> <br>
-    <input type="email" id="email" placeholder="Email" required> <br>
-    <input type="password" id="password" placeholder="Password" required> <br>
-
-    <button id="login-button">Login</button> <br>
-    <button id="registration-button">Register</button> <br>
-    <button id="admin-button">Admin</button> <br>
-    
-    <p id = "login-status"></p>
-
+    <div class="container">
+      <h1>Lab Equipment Management System</h1>
+      <h2>Login</h2>
+      <input type="email" id="email" placeholder="Email" required>
+      <input type="password" id="password" placeholder="Password" required>
+      <div class="button-group">
+        <button id="login-button">Login</button>
+        <button id="registration-button">Register</button>
+        <button id="admin-button">Admin</button>
+      </div>
+      <p id="login-status"></p>
+    </div>
     <script src="firebase.js" type="module"></script>
     <script src="Userlogin.js" type="module"></script>
   </body>
