--- a/home.html
+++ b/home.html
@@ -1,40 +1,174 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Board Dashboard</title>
+    <style>
+      /* General body styling */
+      body {
+        font-family: 'Arial', sans-serif;
+        background: url('background.jpg') no-repeat center center/cover;
+        background-attachment: fixed;
+        margin: 0;
+        padding: 0;
+        color: #333;
+        text-align: center;
+      }
+
+      /* Main container styling */
+      .container {
+        background-color: rgba(255, 255, 255, 0.95);
+        border-radius: 10px;
+        margin: 30px auto;
+        padding: 20px;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+        max-width: 900px;
+        width: 90%;
+        box-sizing: border-box;
+      }
+
+      /* Title styling */
+      h1 {
+        font-size: 2rem;
+        color: #333;
+        margin-bottom: 10px;
+      }
+
+      h2 {
+        font-size: 1.5rem;
+        color: #555;
+        margin-bottom: 15px;
+      }
+
+      /* Table styling */
+      table {
+        width: 100%;
+        border-collapse: collapse;
+        margin-bottom: 20px;
+      }
+
+      table, th, td {
+        border: 1px solid #ccc;
+      }
+
+      th, td {
+        padding: 12px;
+        text-align: center;
+      }
+
+      th {
+        background-color: #007bff;
+        color: #fff;
+        font-weight: bold;
+      }
+
+      tr:nth-child(even) {
+        background-color: #f2f2f2;
+      }
+
+      tr:hover {
+        background-color: #e9ecef;
+      }
+
+      /* Buttons styling */
+      button {
+        background: linear-gradient(45deg, #4CAF50, #8BC34A);
+        color: #fff;
+        padding: 10px 20px;
+        margin: 5px;
+        border: none;
+        border-radius: 5px;
+        font-size: 1rem;
+        cursor: pointer;
+        transition: background 0.3s ease, transform 0.2s ease;
+      }
+
+      button:hover {
+        background: linear-gradient(45deg, #45a049, #76b852);
+        transform: translateY(-2px);
+      }
+
+      #logout {
+        background: linear-gradient(45deg, #ff4b5c, #ff6b81);
+      }
+
+      #logout:hover {
+        background: linear-gradient(45deg, #e2434f, #ff4f6e);
+      }
+
+      #statusMessage {
+        font-size: 1rem;
+        color: #d9534f;
+        margin-top: 10px;
+      }
+
+      /* Responsive Design */
+      @media screen and (max-width: 600px) {
+        h1 {
+          font-size: 1.5rem;
+        }
+
+        h2 {
+          font-size: 1.2rem;
+        }
+
+        button {
+          font-size: 0.9rem;
+          padding: 8px 15px;
+        }
+
+        table, th, td {
+          font-size: 0.9rem;
+          padding: 8px;
+        }
+      }
+    </style>
   </head>
   <body>
-    <h1>Lab Equipment Management System</h1>
-    <h2>Available Boards</h2>
-    <table border="1">
-      <thead>
-        <tr>
-          <th>Serial Number</th>
-          <th>Status</th>
-        </tr>
-      </thead>
-      <tbody id="board-list"></tbody>
-    </table>
+    <div class="container">
+      <!-- Title -->
+      <h1>Lab Equipment Management System</h1>
+      
+      <!-- Available Boards Section -->
+      <h2>Available Boards</h2>
+      <table>
+        <thead>
+          <tr>
+            <th>Serial Number</th>
+            <th>Status</th>
+          </tr>
+        </thead>
+        <tbody id="board-list">
+          <!-- Dynamic Data -->
+        </tbody>
+      </table>
 
-    <button id="applyform">Apply Form</button>
-    <button id="logout">Logout</button>
+      <button id="applyform">Apply Form</button>
+      <button id="logout">Logout</button>
 
-    <h2>Your borrow Boards</h2>
-    <table border="1" >
-      <thead>
-        <tr>
-          <th>Serial Number</th>
-          <th>Status</th>
-          <th>Borrow Date</th>
-          <th>Return</th>
-        </tr>
-      </thead>
-      <tbody id="user-borrow-list"></tbody>
-    </table>
-    <button id="return">Return</button>
-    <p id="statusMessage"></p>
+      <!-- Borrowed Boards Section -->
+      <h2>Your Borrowed Boards</h2>
+      <table>
+        <thead>
+          <tr>
+            <th>Serial Number</th>
+            <th>Status</th>
+            <th>Borrow Date</th>
+            <th>Return</th>
+          </tr>
+        </thead>
+        <tbody id="user-borrow-list">
+          <!-- Dynamic Data -->
+        </tbody>
+      </table>
 
+      <button id="return">Return</button>
+      <p id="statusMessage"></p>
+    </div>
+
+    <!-- JavaScript -->
     <script src="firebase.js" type="module"></script>
     <script src="home.js" type="module"></script>
   </body>
 </html>
-
