--- a/Registration.html
+++ b/Registration.html
@@ -1,18 +1,109 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
+    <style>
+      /* General body styling */
+      body {
+        font-family: 'Arial', sans-serif;
+        background: url('https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?q=80&w=2072&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D') no-repeat center center/cover;
+        background-attachment: fixed;
+        margin: 0;
+        padding: 0;
+        color: #333;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+      }
+
+      /* Main container styling */
+      .container {
+        background-color: rgba(255, 255, 255, 0.95);
+        padding: 20px 30px;
+        border-radius: 10px;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+        max-width: 400px;
+        width: 90%;
+        text-align: center;
+      }
+
+      /* Title styling */
+      h1 {
+        font-size: 2rem;
+        color: #333;
+        margin-bottom: 20px;
+      }
+
+      /* Input fields styling */
+      input {
+        width: 100%;
+        padding: 10px;
+        margin: 10px 0;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        font-size: 1rem;
+        box-sizing: border-box;
+      }
+
+      input:focus {
+        border-color: #007bff;
+        outline: none;
+      }
+
+      /* Buttons styling */
+      button {
+        width: 100%;
+        padding: 10px;
+        margin-top: 10px;
+        border: none;
+        border-radius: 5px;
+        font-size: 1rem;
+        color: #fff;
+        cursor: pointer;
+        transition: background 0.3s ease, transform 0.2s ease;
+      }
+
+      #registration-button {
+        background: linear-gradient(45deg, #28a745, #6bc34a);
+      }
+
+      #registration-button:hover {
+        background: linear-gradient(45deg, #22993e, #58a842);
+        transform: translateY(-2px);
+      }
+
+      #back-button {
+        background: linear-gradient(45deg, #ff4b5c, #ff6b81);
+      }
+
+      #back-button:hover {
+        background: linear-gradient(45deg, #e2434f, #ff4f6e);
+        transform: translateY(-2px);
+      }
+
+      /* Status message styling */
+      #statusMessage {
+        font-size: 1rem;
+        color: #d9534f;
+        margin-top: 10px;
+      }
+    </style>
   </head>
   <body>
-    <h1>Register</h1>
-    <input type="email" id="registration-email" placeholder="Email" required>
-    <input type="password" id="registration-password" placeholder="Password" required>
-    <button id = "registration-button">Register</button> 
-    <button id = "back-button">Back</button> 
-    <p id="statusMessage"></p>
-
+    <div class="container">
+      <h1>Register</h1>
+      <input type="email" id="registration-email" placeholder="Email" required>
+      <input type="password" id="registration-password" placeholder="Password" required>
+      <button id="registration-button">Register</button>
+      <button id="back-button">Back</button>
+      <p id="statusMessage"></p>
+    </div>
 
     <script src="firebase.js" type="module"></script>
-    <script src="registration.js" type="module" ></script>
+    <script src="registration.js" type="module"></script>
   </body>
 </html>
 
