--- a/adminhome.html
+++ b/adminhome.html
@@ -139,12 +139,14 @@
       <thead>
         <tr>
           <th>Date</th>
+          <th>Expired Date</th>
           <th>Name</th>
           <th>Email</th>
           <th>Matric Number</th>
           <th>Board ID</th>
           <th>Status</th>
           <th>Return</th>
+          <th>Return Time</th>
           <th>Action</th>
         </tr>
       </thead>
