--- a/home.html
+++ b/home.html
@@ -155,6 +155,7 @@
             <th>Serial Number</th>
             <th>Status</th>
             <th>Borrow Date</th>
+            <th>Expired Date</th>
             <th>Return</th>
           </tr>
         </thead>
